fix: qa cookbook

--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -15,7 +15,7 @@ This example is inspired from the [LangChain doc](https://python.langchain.com/e
 This example has extra dependencies. You can install them with:
 
 ```bash
-pip install langchain chromadb tiktoken
+pip install langchain langchain-community chromadb tiktoken openai langchain-openai
 ```
 
 Then, you need to go to create an OpenAI key [here](https://platform.openai.com/account/api-keys).
@@ -29,22 +29,22 @@ Then, you need to go to create an OpenAI key [here](https://platform.openai.com/
 
 ```python qa.py
 import os
-from typing import List
 
-from langchain.embeddings.openai import OpenAIEmbeddings
 from langchain.text_splitter import RecursiveCharacterTextSplitter
-from langchain.vectorstores import Chroma
+from langchain_community.vectorstores import Chroma
 from langchain.chains import (
     ConversationalRetrievalChain,
 )
-from langchain.chat_models import ChatOpenAI
+from langchain_openai import ChatOpenAI, OpenAIEmbeddings
 
-from langchain.docstore.document import Document
-from langchain.memory import ChatMessageHistory, ConversationBufferMemory
+from langchain_community.chat_message_histories import ChatMessageHistory
+from langchain.memory import ConversationBufferMemory
 
 import chainlit as cl
 
-os.environ["OPENAI_API_KEY"] = "OPENAI_API_KEY"
+os.environ["OPENAI_API_KEY"] = (
+    "OPENAI_API_KEY"
+)
 
 text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=100)
 
@@ -54,7 +54,7 @@ async def on_chat_start():
     files = None
 
     # Wait for the user to upload a file
-    while files == None:
+    while files is None:
         files = await cl.AskFileMessage(
             content="Please upload a text file to begin!",
             accept=["text/plain"],
@@ -64,7 +64,7 @@ async def on_chat_start():
 
     file = files[0]
 
-    msg = cl.Message(content=f"Processing `{file.name}`...", disable_feedback=True)
+    msg = cl.Message(content=f"Processing `{file.name}`...")
     await msg.send()
 
     with open(file.path, "r", encoding="utf-8") as f:
@@ -93,7 +93,7 @@ async def on_chat_start():
 
     # Create a chain that uses the Chroma vector store
     chain = ConversationalRetrievalChain.from_llm(
-        ChatOpenAI(model_name="gpt-3.5-turbo", temperature=0, streaming=True),
+        ChatOpenAI(model_name="gpt-4o-mini", temperature=0, streaming=True),
         chain_type="stuff",
         retriever=docsearch.as_retriever(),
         memory=memory,
@@ -123,7 +123,9 @@ async def main(message: cl.Message):
             source_name = f"source_{source_idx}"
             # Create the text element referenced in the message
             text_elements.append(
-                cl.Text(content=source_doc.page_content, name=source_name, display="side")
+                cl.Text(
+                    content=source_doc.page_content, name=source_name, display="side"
+                )
             )
         source_names = [text_el.name for text_el in text_elements]
 
