fix: docs data layer

--- a/api-reference/data-persistence/custom-data-layer.mdx
+++ b/api-reference/data-persistence/custom-data-layer.mdx
@@ -2,7 +2,8 @@
 title: Custom Data Layer
 ---
 
-The `BaseDataLayer` class serves as an abstract foundation for data persistence operations within the Chainlit framework. This class outlines methods for managing users, feedback, elements, steps, and threads in a chatbot application.
+The `BaseDataLayer` class serves as an abstract foundation for data persistence operations within the Chainlit framework.
+This class outlines methods for managing users, feedback, elements, steps, and threads in a chatbot application.
 
 ## Methods
 
