--- a/api-reference/elements/text.mdx
+++ b/api-reference/elements/text.mdx
@@ -28,7 +28,7 @@ You must provide either an url or a path or content bytes.
 
 <ParamField path="display" type="ElementDisplay" optional>
   Determines how the text element should be displayed in the UI. Choices are
-  "side" (default), "inline", or "page".
+  "side", "inline", or "page".
 </ParamField>
 
 <ParamField path="language" type="str" optional>
