--- a/api-reference/lifecycle-hooks/on-audio-end.mdx
+++ b/api-reference/lifecycle-hooks/on-audio-end.mdx
@@ -12,12 +12,6 @@ import chainlit as cl
 
 
 @cl.on_audio_end
-async def on_audio_end(elements: list[ElementBased]):
-    # Get the audio buffer from the session
-    audio_buffer: BytesIO = cl.user_session.get("audio_buffer")
-    audio_buffer.seek(0)  # Move the file pointer to the beginning
-    audio_file = audio_buffer.read()
-    audio_mime_type: str = cl.user_session.get("audio_mime_type")
-
-   # Apply Speech to Text or any other processing
+async def on_audio_end():
+    pass
 ```
