--- a/concepts/element.mdx
+++ b/concepts/element.mdx
@@ -8,14 +8,6 @@ That is where elements come in. Each element is a piece of content that can be a
 
 <CardGroup cols={2}>
   <Card
-    title="Text Element"
-    icon="text"
-    color="#ea5a0c"
-    href="/api-reference/elements/text"
-  >
-    Ideal to display RAG sources.
-  </Card>
-  <Card
     title="Image Element"
     icon="image"
     color="#0285c7"
@@ -30,6 +22,14 @@ That is where elements come in. Each element is a piece of content that can be a
     href="/api-reference/elements/pdf"
   >
     Ideal to display RAG sources.
+  </Card>
+  <Card
+    title="Custom Element"
+    icon="react"
+    color="#61DBFB"
+    href="/api-reference/elements/custom"
+  >
+    Write your own element in JSX.
   </Card>
   <Card
     title="More Elements"
