--- a/data-persistence/history.mdx
+++ b/data-persistence/history.mdx
@@ -2,14 +2,11 @@
 title: Chat History
 ---
 
-Chat history allow users to search and browse their past conversations.
+Chat history allow users to search, browse and resume their past conversations.
 
-## How-to
+If data persistence is enabled but the user is not authenticated, the conversations will be stored but users won't be able to see the chat history.
 
-To enable chat history, you need to enable:
-
-1. [Data persistence](/data-persistence/overview)
-2. [Authentication](/authentication)
+You need both data persistence and [authentication](/authentication) configured to enable the chat history.
 
 <Frame caption="Chat History">
   <img src="/images/history.gif" />
