--- a/api-reference/ask/ask-for-action.mdx
+++ b/api-reference/ask/ask-for-action.mdx
@@ -18,9 +18,6 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
   The author of the message, defaults to the chatbot name defined in your
   config.
 </ParamField>
-<ParamField path="disable_human_feedback" type="bool" optional default="False">
-  Boolean flag to disable human feedback buttons.
-</ParamField>
 <ParamField path="timeout" type="int" optional default={90}>
   The number of seconds to wait for an answer before raising a TimeoutError.
 </ParamField>
@@ -45,12 +42,12 @@ async def main():
     res = await cl.AskActionMessage(
         content="Pick an action!",
         actions=[
-            cl.Action(name="continue", value="continue", label="✅ Continue"),
-            cl.Action(name="cancel", value="cancel", label="❌ Cancel"),
+            cl.Action(name="continue", payload={"value": "continue"}, label="✅ Continue"),
+            cl.Action(name="cancel", payload={"value": "cancel"}, label="❌ Cancel"),
         ],
     ).send()
 
-    if res and res.get("value") == "continue":
+    if res and res.get("payload").get("value") == "continue":
         await cl.Message(
             content="Continue!",
         ).send()
