--- a/api-reference/elements/image.mdx
+++ b/api-reference/elements/image.mdx
@@ -14,7 +14,7 @@ You must provide either an url or a path or content bytes.
 
 <ParamField path="display" type="ElementDisplay" optional>
   Determines how the image element should be displayed in the UI. Choices are
-  "side" (default), "inline", or "page".
+  "side", "inline", or "page".
 </ParamField>
 
 <ParamField path="size" type="ElementSize" optional>
