--- a/api-reference/elements/pdf.mdx
+++ b/api-reference/elements/pdf.mdx
@@ -12,7 +12,7 @@ The `Pdf` class allows you to display a PDF hosted remotely or locally in the ch
 
 <ParamField path="display" type="ElementDisplay" optional>
   Determines how the PDF element should be displayed in the UI. Choices are
-  "side" (default), "inline", or "page".
+  "side", "inline", or "page".
 </ParamField>
 
 <ParamField path="url" type="str">
