--- a/api-reference/elements/plotly.mdx
+++ b/api-reference/elements/plotly.mdx
@@ -14,7 +14,7 @@ The advantage of the `Plotly` element over the `Pyplot` element is that it's int
 
 <ParamField path="display" type="ElementDisplay" optional>
   Determines how the chart element should be displayed in the UI. Choices are
-  "side" (default), "inline", or "page".
+  "side", "inline", or "page".
 </ParamField>
 
 <ParamField path="size" type="ElementSize" optional>
