--- a/api-reference/elements/pyplot.mdx
+++ b/api-reference/elements/pyplot.mdx
@@ -14,7 +14,7 @@ The difference of between this element and the `Plotly` element is that the user
 
 <ParamField path="display" type="ElementDisplay" optional>
   Determines how the chart element should be displayed in the UI. Choices are
-  "side" (default), "inline", or "page".
+  "side", "inline", or "page".
 </ParamField>
 
 <ParamField path="size" type="ElementSize" optional>
