--- a/concepts/action.mdx
+++ b/concepts/action.mdx
@@ -15,7 +15,12 @@ import chainlit as cl
 async def start():
     # Sending an action button within a chatbot message
     actions = [
-        cl.Action(name="action_button", value="example_value", description="Click me!")
+        cl.Action(
+            name="action_button",
+            icon="mouse-pointer-click",
+            payload={"value": "example_value"},
+            label="Click me!"
+        )
     ]
 
     await cl.Message(content="Interact with this action button:", actions=actions).send()
@@ -28,9 +33,7 @@ To handle the user's click on the action button, you need to define a callback f
 ```python
 @cl.action_callback("action_button")
 async def on_action(action: cl.Action):
-    print("The user clicked on the action button!")
-
-    return "Thank you for clicking on the action button!"
+    print(action.payload)
 ```
 
 <Card
@@ -42,12 +45,3 @@ async def on_action(action: cl.Action):
   Learn how more about Actions.
 </Card>
 
-## Toaster
-
-While an action is being processed, a toaster is displayed to the user. The toaster is a small notification that appears at the top right of the screen and indicates that the action is being processed.
-
-If the action callback returns a string, the toaster will display it to the user once the action is processed.
-
-<Frame caption="Output of the code above">
-  <img src="/images/action.gif" />
-</Frame>
