--- a/deploy/overview.mdx
+++ b/deploy/overview.mdx
@@ -28,7 +28,7 @@ A Chainlit application can be consumed through multiple platforms. Write your as
   title="Custom React App"
   color="#61DBFB"
   icon="react"
-  href="/deploy/react-frontend"
+  href="/deploy/react"
 >
   Learn how to integrate your custom React frontend with the Chainlit backend.
 </Card>
