--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -10,7 +10,7 @@ Chainlit is an open-source Python package to build production ready Conversation
     autoPlay
     loop
     muted
-    src="https://github.com/Chainlit/chainlit/assets/13104895/cbcb8078-ab4d-4e4c-8e4e-7aaa51ca1fd0"
+    src="/images/overview.mp4"
   />
 </Frame>
 
