--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -10,19 +10,21 @@ Chainlit is an open-source Python package to build production ready Conversation
     autoPlay
     loop
     muted
-    src="https://github.com/Chainlit/chainlit/assets/13104895/cbcb8078-ab4d-4e4c-8e4e-7aaa51ca1fd0"
+    src="/images/overview.mp4"
   />
 </Frame>
 
 ## Key features
 
-1. [Build fast:](/examples/openai-sql) Integrate seamlessly with an existing code base or start from scratch in minutes
+1. [Build fast:](/examples/openai-sql) Get started in a couple lines of Python
 
-2. [Multi Platform:](/deploy/overview) Write your assistant logic once, use everywhere
+2. [Authentication:](/authentication/overview) Integrate with corporate identity providers and existing authentication infrastructure
 
 3. [Data persistence:](/data-persistence/overview) Collect, monitor and analyze data from your users
 
 4. [Visualize multi-steps reasoning:](/concepts/step) Understand the intermediary steps that produced an output at a glance
+
+5. [Multi Platform:](/deploy/overview) Write your assistant logic once, use everywhere
 
 ## Integrations
 
