fix: data layers

--- a/data-persistence/overview.mdx
+++ b/data-persistence/overview.mdx
@@ -10,11 +10,11 @@ To enable data persistence in your Chainlit app, you have several options:
 
 <CardGroup cols={2}>
   <Card
-    title="Custom Data Layer"
+    title="Open Source Data Layer"
     icon="toolbox"
-    href="/data-persistence/custom"
+    href="/data-layers/overview"
   >
-    Setup your own SQLAlchemy or DynamoDB instance. Build your own data layer.
+    Use the official Chainlit data layer, leverage a community data layer or build your own.
   </Card>
   <Card
     title="Literal AI"
