fix: cloud -> files system

--- a/data-layers/official.mdx
+++ b/data-layers/official.mdx
@@ -16,7 +16,7 @@ Follow the steps in this repository to persist your conversations in 2 minutes:
 Do not forget to have your Chainlit application point to the database you set up by
 adding the `DATABASE_URL` environment variable in your `.env`.  
 
-If you wish to store elements, the same goes for your cloud configuration.
+If you wish to store elements, the same goes for your files system configuration.
 </Warning>
 
 <Tip>
