--- a/customisation/theme.mdx
+++ b/customisation/theme.mdx
@@ -79,12 +79,12 @@ To modify the CSS variables, create a `theme.json` file under `/public` with the
 }
 ```
 
+As you may have noticed, the colors are not expressed in Hexadecimal but rather in HSL. This is mandatory.
+You can easily [convert any color to HSL](https://www.google.com/search?q=hex+to+hsl).
+
 The `custom_fonts` array can receive URLs (typically from google fonts) like:
 
 ```json
 custom_fonts: ["https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"]
 ```
-
-As you may have notice, the colors are not expressed in Hexadecimal but rather in HSL. This is mandatory.
-You can easily [convert any color to HSL](https://www.google.com/search?q=hex+to+hsl).
 
