--- a/data-layers/overview.mdx
+++ b/data-layers/overview.mdx
@@ -3,7 +3,7 @@ title: Overview
 ---
 
 Choose one of the following options for your open source data layer:
-- use the official Chainlit data layer (PostgreSQL + SQLAlchemy)
+- use the official Chainlit data layer (PostgreSQL + asyncpg)
 - leverage a community-based data layer
 - or build your own!
 
