add theme variable doc

--- a/customisation/theme.mdx
+++ b/customisation/theme.mdx
@@ -6,6 +6,8 @@ Chainlit's theme is based on CSS variables.
 
 To modify the CSS variables, create a `theme.json` file under `/public` with the following content.
 
+You can check [Shadcn's documentation](https://ui.shadcn.com/docs/theming#list-of-variables) to learn about the role of each variable.
+
 <Note>If the UI is not updated, try to empty your browser cache.</Note>
 
 ```json theme.json
