--- a/deploy/copilot.mdx
+++ b/deploy/copilot.mdx
@@ -55,6 +55,8 @@ First, make sure your Chainlit server is running. Then, add the following script
 
 That's it! You should now see a floating button on the bottom right corner of your website. Clicking on it will open the Copilot.
 
+You can programmatically toggle the copilot with `window.toggleChainlitCopilot()`.
+
 ## Widget Configuration
 
 The `mountChainlitWidget` function accepts the following options:
