refine api document AskActionMessage example

--- a/api-reference/ask/ask-for-action.mdx
+++ b/api-reference/ask/ask-for-action.mdx
@@ -42,8 +42,8 @@ async def main():
     res = await cl.AskActionMessage(
         content="Pick an action!",
         actions=[
-            cl.Action(name="continue", payload={"value": "continue"}, label="✅ Continue"),
-            cl.Action(name="cancel", payload={"value": "cancel"}, label="❌ Cancel"),
+            cl.Action(name="continue", value="continue", label="✅ Continue"),
+            cl.Action(name="cancel", value="cancel", label="❌ Cancel"),
         ],
     ).send()
 
