--- a/api-reference/ask/ask-for-action.mdx
+++ b/api-reference/ask/ask-for-action.mdx
@@ -47,7 +47,7 @@ async def main():
         ],
     ).send()
 
-    if res and res.get("payload").get("value") == "continue":
+    if res and res.get("value") == "continue":
         await cl.Message(
             content="Continue!",
         ).send()
