add tts example

--- a/advanced-features/multi-modal.mdx
+++ b/advanced-features/multi-modal.mdx
@@ -13,6 +13,25 @@ Chainlit let's you access the user's microphone audio stream and process it in r
   [@cl.on_audio_chunk](/api-reference/lifecycle-hooks/on-audio-chunk) decorator.
 </Note>
 
+<CardGroup cols={2}>
+  <Card
+    title="OpenAI Realtime"
+    icon="microphone-lines"
+    color="#0285c7"
+    href="https://github.com/Chainlit/cookbook/tree/main/realtime-assistant"
+  >
+    Cookbook example showcasing how to use Chainlit with realtime audio APIs.
+  </Card>
+  <Card
+    title="Text To Speech -> Speech to Text"
+    color="F80061"
+    icon="microphone"
+    href="https://github.com/Chainlit/cookbook/blob/main/openai-whisper/app.py"
+  >
+    Cookbook example showcasing speech to text -> answer generation -> text to speech.
+  </Card>
+</CardGroup>
+
 <Frame caption="OpenAI Realtime Example">
   <video
     controls
@@ -20,8 +39,6 @@ Chainlit let's you access the user's microphone audio stream and process it in r
     src="/images/openai-realtime.mp4"
   />
 </Frame>
-
-Check the [OpenAI Realtime](https://github.com/Chainlit/cookbook/tree/main/realtime-assistant) cookbook example.
 
 ## Spontaneous File Uploads
 
