add recoil to custom elements available imports

--- a/api-reference/elements/custom.mdx
+++ b/api-reference/elements/custom.mdx
@@ -57,6 +57,7 @@ Only use available packages for imports. Here is the full list:
 - `react`
 - `sonner`
 - `zod`
+- `recoil`
 - `react-hook-form`
 - `lucide-react`
 - `@/components/ui/accordion`
