--- a/deploy/overview.mdx
+++ b/deploy/overview.mdx
@@ -20,7 +20,7 @@ A Chainlit application can be consumed through multiple platforms. Write your as
   Embed your Chainlit app on any website as a Copilot.
 </Card>
 
-<Card title="API" icon="webhook" color="#F80061" href="/deploy/api">
+<Card title="API" icon="webhook" color="#F80061" href="/integrations/fastapi">
   Expose custom API endpoints.
 </Card>
 
