--- a/guides/migration/1.1.300.mdx
+++ b/guides/migration/1.1.300.mdx
@@ -147,7 +147,7 @@ If no avatar is found, it will default to the favicon.
 
 Chainlit is now mountable as a FastAPI sub application. This allows you to use Chainlit on your existing FastAPI application.
 
-Check the [FastAPI integration](/integrations/fastapi) and [API documentation](/deploy/api) for more information.
+Check the [FastAPI integration](/integrations/fastapi) and [API documentation](/integrations/fastapi) for more information.
 
 ## Minor Changes
 
