--- a/api-reference/action.mdx
+++ b/api-reference/action.mdx
@@ -42,7 +42,7 @@ async def on_action(action):
 async def start():
     # Sending an action button within a chatbot message
     actions = [
-        cl.Action(name="action_button", value="example_value", description="Click me!")
+        cl.Action(name="action_button", payload={"value": "example_value"}, label="Click me!")
     ]
 
     await cl.Message(content="Interact with this action button:", actions=actions).send()
