--- a/data-layers/sqlalchemy.mdx
+++ b/data-layers/sqlalchemy.mdx
@@ -41,6 +41,7 @@ CREATE TABLE IF NOT EXISTS steps (
     "input" TEXT,
     "output" TEXT,
     "createdAt" TEXT,
+    "command" TEXT,
     "start" TEXT,
     "end" TEXT,
     "generation" JSONB,
