--- a/authentication/oauth.mdx
+++ b/authentication/oauth.mdx
@@ -159,7 +159,7 @@ It's possible to plug-in for any OAuth provider using Chainlit. Required steps a
   - `YOUR_PROVIDER_CLIENT_ID`
   - `YOUR_PROVIDER_CLIENT_SECRET`
 
-[This PR](https://github.com/Chainlit/cookbook/pull/92) describes how to do it, also check [base class](https://github.com/Chainlit/chainlit/blob/2cb38ad8596ac547355f87266bc15ab3dfd632d2/backend/chainlit/oauth_providers.py#L13) for reference.
+[This cookbook example](https://github.com/Chainlit/cookbook/tree/main/auth) describes how to do it, also check [base class](https://github.com/Chainlit/chainlit/blob/2cb38ad8596ac547355f87266bc15ab3dfd632d2/backend/chainlit/oauth_providers.py#L13) for reference.
 
 ## Prompt Configuration
 
