--- a/authentication/oauth.mdx
+++ b/authentication/oauth.mdx
@@ -147,6 +147,20 @@ You need to set the following environment variables:
 - `OAUTH_KEYCLOAK_BASE_URL`: Your Keycloak URL. 
 - `OAUTH_KEYCLOAK_NAME`: Optional, see above.
 
+### Custom Provider
+It's possible to plug-in for any OAuth provider using Chainlit. Required steps are:
+- modifying `providers` variable in runtime
+- implementing `CustomOAuthProvider(OAuthProvider)` class with methods and fields: 
+  - `get_token(self, code, url)`
+  - `get_user_info(self, token)` 
+  - `authorize_params`
+  - `env`
+- providing environmental variables as described in `env`, for example:
+  - `YOUR_PROVIDER_CLIENT_ID`
+  - `YOUR_PROVIDER_CLIENT_SECRET`
+
+[This cookbook example](https://github.com/Chainlit/cookbook/tree/main/auth) describes how to do it, also check [base class](https://github.com/Chainlit/chainlit/blob/2cb38ad8596ac547355f87266bc15ab3dfd632d2/backend/chainlit/oauth_providers.py#L13) for reference.
+
 ## Prompt Configuration
 
 Starting from version 1.3.0, Chainlit allows you to configure how OAuth providers handle re-authentication through the `prompt` parameter. This is particularly useful for controlling the login behavior when users log out.
