--- a/deploy/overview.mdx
+++ b/deploy/overview.mdx
@@ -183,7 +183,7 @@ However, if you embed Chainlit on a website, the connection will fail because of
 
 In that case, you will have to update the `allow_origins` field of your `.chainlit/config.toml`.
 
-## Community ressource
+## Community resource
 
 After you've successfully set up and tested your Chainlit application locally, the next step is to make it accessible to a wider audience by deploying it to a hosting service. This guide provides various options for self-hosting your Chainlit app.
 
